--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-website-personal",
-  "homepage": "http://erica-w-fu.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://erica-w-fu.github.io/erica-w-fu",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
